--- a/notebooks/spec_aug.ipynb
+++ b/notebooks/spec_aug.ipynb
@@ -2,153 +2,304 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "def sorted_indices_by_euclidean_distance_torch(coords: torch.Tensor):\n",
+    "    \"\"\"\n",
+    "    coords: LongTensor of shape (N,2) with (row, col) pairs.\n",
+    "    Returns: dict {i: LongTensor([i, j1, j2, ...])} with all N indices\n",
+    "             sorted by distance from coords[i].\n",
+    "    \"\"\"\n",
+    "    N = coords.shape[0]\n",
+    "    dist_dict = {}\n",
+    "    # Convert to float for distance computation\n",
+    "    coords_f = coords.float()\n",
+    "    for i in range(N):\n",
+    "        # compute vector differences\n",
+    "        diff = coords_f - coords_f[i:i+1]         # shape (N,2)\n",
+    "        dists = diff.norm(dim=1)                 # shape (N,)\n",
+    "        order = torch.argsort(dists)             # indices sorted by distance\n",
+    "        dist_dict[i] = order                     # LongTensor of length N\n",
+    "    return dist_dict\n",
+    "\n",
+    "def build_distance_dict_torch(shape=(8, 8), traversal=None):\n",
+    "    \"\"\"\n",
+    "    shape: tuple (H, W)\n",
+    "    traversal: optional list or tensor of length H*W giving (row, col) coords\n",
+    "               in the order your 1D array uses. If None, assumes standard\n",
+    "               row-major flatten.\n",
+    "    Returns: dict from flat-index -> LongTensor of neighbors sorted by distance.\n",
+    "    \"\"\"\n",
+    "    H, W = shape\n",
+    "    N = H * W\n",
+    "\n",
+    "    if traversal is None:\n",
+    "        # build row‐major coords\n",
+    "        # coords[i] = (i//W, i%W)\n",
+    "        rows = torch.arange(N, dtype=torch.long) // W\n",
+    "        cols = torch.arange(N, dtype=torch.long) % W\n",
+    "        coords = torch.stack([rows, cols], dim=1)  # (N,2)\n",
+    "    else:\n",
+    "        coords = torch.tensor(traversal, dtype=torch.long)\n",
+    "        assert coords.shape == (N, 2), \"Traversal must be (H*W, 2)\"\n",
+    "\n",
+    "    return sorted_indices_by_euclidean_distance_torch(coords)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist_dict = build_distance_dict_torch((8,8))\n",
+    "savePath = '/home3/skaasyap/willett/outputs/'\n",
+    "torch.save(dist_dict, f'{savePath}dist_dict.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "import torch\n",
+    "import random\n",
+    "\n",
+    "def channel_specaugment_masks(\n",
+    "    x,            # tensor [B, T, D]\n",
+    "    num_masks, max_channels_to_mask,\n",
+    "    dist_dict,\n",
+    "    num_channels=64,\n",
+    "    features_per_channel=2\n",
+    "):\n",
+    "    B, T, D = x.shape\n",
+    "    device = x.device\n",
+    "    masks = torch.zeros(B, D, dtype=torch.bool, device=device)\n",
+    "\n",
+    "    # build a [B, num_channels] of uniform weights\n",
+    "    weights = torch.ones(B, num_channels, device=device)\n",
+    "\n",
+    "    # now sample *per-row*:\n",
+    "    # starts1: [B, N], starts2: [B, M]\n",
+    "    starts1 = torch.multinomial(weights, num_masks, replacement=False)\n",
+    "    starts2 = torch.multinomial(weights, num_masks, replacement=False)\n",
+    "    \n",
+    "    # widths per mask, per sample\n",
+    "    widths1 = torch.randint(0, max_channels_to_mask+1, (B, num_masks), device=device)\n",
+    "    widths2 = torch.randint(0, max_channels_to_mask+1, (B, num_masks), device=device)\n",
+    "    \n",
+    "\n",
+    "    # precompute feature-block offsets\n",
+    "    off1 = [feat * num_channels for feat in range(features_per_channel)]\n",
+    "    off2 = [features_per_channel * num_channels + feat * num_channels\n",
+    "            for feat in range(features_per_channel)]\n",
+    "    \n",
+    "\n",
+    "    for b in range(B):\n",
+    "        # electrode 1\n",
+    "        for start_ch, w in zip(starts1[b], widths1[b]):\n",
+    "            w = int(w)\n",
+    "            if w == 0: \n",
+    "                continue\n",
+    "            nearest = dist_dict[int(start_ch.item())][:w]\n",
+    "            idxs = torch.tensor(nearest, dtype=torch.long, device=device)\n",
+    "            for base in off1:\n",
+    "                masks[b, base + idxs] = True\n",
+    "\n",
+    "        # electrode 2\n",
+    "        for start_ch, w in zip(starts2[b], widths2[b]):\n",
+    "            w = int(w)\n",
+    "            if w == 0:\n",
+    "                continue\n",
+    "            nearest = dist_dict[int(start_ch.item())][:w]\n",
+    "            idxs = torch.tensor(nearest, dtype=torch.long, device=device)\n",
+    "            for base in off2:\n",
+    "                masks[b, base + idxs] = True\n",
+    "\n",
+    "    # broadcast mask over time\n",
+    "    return masks.unsqueeze(1).expand(-1, T, -1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Sample 0:\n",
-      "Original:\n",
-      "tensor([[-1.5667, -0.8848, -0.0823, -1.0963],\n",
-      "        [-0.2630, -1.9768, -1.0156,  1.9896],\n",
-      "        [-0.4240,  0.9485, -2.6145, -1.4046],\n",
-      "        [ 0.6807,  0.2921, -0.8919,  1.0357],\n",
-      "        [-0.3071,  0.4782, -0.0400,  0.0223],\n",
-      "        [-0.0794, -0.3305,  0.8095, -1.4395],\n",
-      "        [ 0.2538, -0.8903,  0.3576, -0.7388],\n",
-      "        [-1.0737,  0.1499, -0.8428,  0.6036],\n",
-      "        [ 2.2194,  1.8892, -0.3977, -0.5240],\n",
-      "        [ 0.2136, -0.3794, -1.0174,  1.5791],\n",
-      "        [-0.7023,  0.5966,  0.8818,  0.3092],\n",
-      "        [-1.2846,  0.4203, -2.1773,  0.3069]])\n",
-      "Masked:\n",
-      "tensor([[-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
-      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
-      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
-      "        [ 6.8074e-01,  2.9214e-01, -8.9190e-01,  1.0357e+00],\n",
-      "        [-3.0712e-01,  4.7820e-01, -4.0047e-02,  2.2303e-02],\n",
-      "        [-7.9409e-02, -3.3050e-01,  8.0954e-01, -1.4395e+00],\n",
-      "        [ 2.5378e-01, -8.9029e-01,  3.5758e-01, -7.3885e-01],\n",
-      "        [-1.0737e+00,  1.4991e-01, -8.4285e-01,  6.0360e-01],\n",
-      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
-      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
-      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
-      "        [-1.2846e+00,  4.2026e-01, -2.1773e+00,  3.0694e-01]])\n",
-      "Mask positions: [0, 1, 2, 8, 9, 10]\n",
-      "\n",
-      "Sample 1:\n",
-      "Original:\n",
-      "tensor([[-0.9034,  0.5856,  1.4360,  1.5973],\n",
-      "        [-1.3649, -1.2709,  0.1486, -0.5789],\n",
-      "        [-0.5987, -1.2989,  1.6562, -2.2106],\n",
-      "        [-1.0345,  0.3012, -1.0185,  0.3474],\n",
-      "        [ 1.1421, -0.0552, -1.9057,  0.8582],\n",
-      "        [ 0.4565, -0.5931,  0.1846,  0.3480],\n",
-      "        [ 0.4704,  0.1593, -1.6408, -0.3704],\n",
-      "        [-0.3444, -0.0763,  0.2898, -0.8294],\n",
-      "        [ 2.0255, -0.7030,  0.0207, -0.4025],\n",
-      "        [-0.6412, -2.1793,  0.9652, -0.7101],\n",
-      "        [-0.2891,  0.7326,  0.0354, -1.6045],\n",
-      "        [ 0.1476, -0.1946,  0.1133,  1.7815]])\n",
-      "Masked:\n",
-      "tensor([[-9.0343e-01,  5.8557e-01,  1.4360e+00,  1.5973e+00],\n",
-      "        [-1.3649e+00, -1.2709e+00,  1.4857e-01, -5.7889e-01],\n",
-      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
-      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
-      "        [ 1.1421e+00, -5.5213e-02, -1.9057e+00,  8.5823e-01],\n",
-      "        [ 4.5653e-01, -5.9313e-01,  1.8457e-01,  3.4795e-01],\n",
-      "        [ 4.7040e-01,  1.5928e-01, -1.6408e+00, -3.7044e-01],\n",
-      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
-      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
-      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
-      "        [-2.8914e-01,  7.3263e-01,  3.5388e-02, -1.6045e+00],\n",
-      "        [ 1.4765e-01, -1.9457e-01,  1.1326e-01,  1.7815e+00]])\n",
-      "Mask positions: [2, 3, 7, 8, 9]\n"
+      "[0, 64] [128, 192]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1174267/2953208141.py:54: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  idxs = torch.tensor(nearest, dtype=torch.long, device=device)\n",
+      "/tmp/ipykernel_1174267/2953208141.py:44: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  idxs = torch.tensor(nearest, dtype=torch.long, device=device)\n"
      ]
     }
    ],
    "source": [
-    "import torch\n",
-    "import torch\n",
+    "torch.manual_seed(0)\n",
+    "random.seed(0)\n",
     "\n",
+    "B, T, D = 5, 10, 256\n",
+    "x = torch.randn(B, T, D)\n",
     "\n",
-    "class DummySpecAug:\n",
-    "    def __init__(self, mask_token, patch_height=1, max_mask_pct=0.2):\n",
-    "        self.mask_token = mask_token\n",
-    "        self.patch_height = patch_height\n",
-    "        self.max_mask_pct = max_mask_pct\n",
-    "\n",
-    "    def apply_specaugment_mask(self, X, X_len, num_masks=2):\n",
-    "        \"\"\"\n",
-    "        Fully vectorized SpecAugment-style time masking (no loops).\n",
-    "        Args:\n",
-    "            X: (B, P, D)\n",
-    "            X_len: (B,) in timepoints\n",
-    "        Returns:\n",
-    "            X_masked: (B, P, D), mask: (B, P)\n",
-    "        \"\"\"\n",
-    "        B, P, D = X.shape\n",
-    "        device = X.device\n",
-    "\n",
-    "        valid_lens = (X_len // self.patch_height).to(device)\n",
-    "        max_mask_lens = (self.max_mask_pct * valid_lens).clamp(min=1).long()\n",
-    "\n",
-    "        B_rep = B * num_masks\n",
-    "        valid_lens_rep = valid_lens.repeat_interleave(num_masks)\n",
-    "        max_mask_lens_rep = max_mask_lens.repeat_interleave(num_masks)\n",
-    "\n",
-    "        t = (torch.rand(B_rep, device=device) * max_mask_lens_rep.float()).floor().long() + 1\n",
-    "        max_start = (valid_lens_rep - t + 1).clamp(min=1)\n",
-    "        t0 = (torch.rand(B_rep, device=device) * max_start.float()).floor().long()\n",
-    "\n",
-    "        # Build flattened mask indices\n",
-    "        arange = torch.arange(P, device=device).unsqueeze(0)  # (1, P)\n",
-    "        t0_exp = t0.unsqueeze(1)                              # (B_rep, 1)\n",
-    "        t1_exp = (t0 + t).unsqueeze(1)                        # (B_rep, 1)\n",
-    "        mask_chunks = (arange >= t0_exp) & (arange < t1_exp)  # (B_rep, P)\n",
-    "\n",
-    "        # Now gather the flat indices to write into (B, P)\n",
-    "        batch_idx = torch.arange(B, device=device).repeat_interleave(num_masks)  # (B_rep,)\n",
-    "        patch_idx = mask_chunks.nonzero(as_tuple=False)  # (N_masked, 2): [mask_row, patch_col]\n",
-    "        b_indices = batch_idx[patch_idx[:, 0]]           # Map B_rep index → actual batch index\n",
-    "        p_indices = patch_idx[:, 1]                      # patch index\n",
-    "\n",
-    "        # Set those positions to True in the full mask\n",
-    "        mask = torch.zeros(B, P, dtype=torch.bool, device=device)\n",
-    "        mask[b_indices, p_indices] = True\n",
-    "\n",
-    "        # Apply mask token\n",
-    "        X_masked = X.clone()\n",
-    "        X_masked[mask] = self.mask_token\n",
-    "\n",
-    "        return X_masked, mask\n",
-    "\n",
-    "\n",
-    "# --------------------------\n",
-    "# Create dummy input\n",
-    "B, P, D = 2, 12, 4  # batch, patches, dim\n",
-    "X = torch.randn(B, P, D)\n",
-    "X_len = torch.tensor([12, 10])  # valid lengths (in timepoints)\n",
-    "\n",
-    "# Define mask token and module\n",
-    "mask_token = torch.tensor([-99.0] * D)\n",
-    "specaug = DummySpecAug(mask_token=mask_token, patch_height=1, max_mask_pct=0.3)\n",
-    "\n",
-    "# Apply\n",
-    "X_masked, mask = specaug.apply_specaugment_mask(X, X_len, num_masks=2)\n",
-    "\n",
-    "# --------------------------\n",
-    "# Inspect the result\n",
-    "for b in range(B):\n",
-    "    print(f\"\\nSample {b}:\")\n",
-    "    print(\"Original:\")\n",
-    "    print(X[b])\n",
-    "    print(\"Masked:\")\n",
-    "    print(X_masked[b])\n",
-    "    print(\"Mask positions:\", mask[b].nonzero(as_tuple=True)[0].tolist())\n"
+    "mask = channel_specaugment_masks(x, 2, 5, dist_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([20])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.where(mask[0,0])[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10, 100, 4])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device = 'cpu'\n",
+    "B, P, C = 10, 100, 4\n",
+    "mask = torch.zeros(B, P, C, dtype=torch.bool, device=device)\n",
+    "mask.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([8])\n",
+      "torch.Size([8])\n",
+      "torch.Size([8])\n",
+      "torch.Size([8])\n",
+      "torch.Size([8])\n",
+      "torch.Size([8])\n",
+      "torch.Size([8])\n",
+      "torch.Size([8])\n",
+      "torch.Size([8])\n",
+      "torch.Size([8])\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z, B, N = 5, 10, 8\n",
+    "hi = torch.Tensor([random.randint(0, Z) for _ in range(B*N)]).reshape(10,8)\n",
+    "for row in hi:\n",
+    "    print(row.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[42] [18, 58] [0] [0, 1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([186, 250])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "channel_specaugment_indices(3, 2, dist_dict=dist_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([18, 26, 19, 10, 17, 25,  9, 11, 27,  2, 20, 34, 16, 12, 24, 28,  8, 33,\n",
+       "        35,  3,  1,  0, 32, 36,  4, 21, 42, 43, 29, 41, 13, 44, 40, 37,  5, 22,\n",
+       "        50, 30, 14, 51, 49, 45, 38, 52,  6, 48, 23, 58, 53, 46, 15, 31, 57, 59,\n",
+       "         7, 56, 39, 60, 54, 47, 61, 55, 62, 63])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist_dict[18]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "250-186"
    ]
   },
   {
