--- a/notebooks/einops.ipynb
+++ b/notebooks/einops.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home2/ebrahim/miniconda3/envs/llm_brain/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/home2/ebrahim/miniconda3/envs/llm_brain/lib/python3.11/site-packages/transformers/utils/generic.py:441: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
-      "  _torch_pytree._register_pytree_node(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from einops import rearrange\n",
@@ -26,6 +15,64 @@
     "patch_width = 4\n",
     "\n",
     "output_tensor = rearrange(input_tensor, 'b c (h p1) (w p2) -> b (h w) (p1 p2 c)', p1=patch_height, p2=patch_width)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[ 1,  2,  3,  4,  5,  6,  7,  8],\n",
+       "          [ 9, 10, 11, 12, 13, 14, 15, 16],\n",
+       "          [17, 18, 19, 20, 21, 22, 23, 24],\n",
+       "          [25, 26, 27, 28, 29, 30, 31, 32],\n",
+       "          [33, 34, 35, 36, 37, 38, 39, 40],\n",
+       "          [41, 42, 43, 44, 45, 46, 47, 48],\n",
+       "          [49, 50, 51, 52, 53, 54, 55, 56],\n",
+       "          [57, 58, 59, 60, 61, 62, 63, 64],\n",
+       "          [65, 66, 67, 68, 69, 70, 71, 72],\n",
+       "          [73, 74, 75, 76, 77, 78, 79, 80],\n",
+       "          [81, 82, 83, 84, 85, 86, 87, 88],\n",
+       "          [89, 90, 91, 92, 93, 94, 95, 96]]]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 1,  2,  3,  4,  9, 10, 11, 12, 17, 18, 19, 20],\n",
+       "         [ 5,  6,  7,  8, 13, 14, 15, 16, 21, 22, 23, 24],\n",
+       "         [25, 26, 27, 28, 33, 34, 35, 36, 41, 42, 43, 44],\n",
+       "         [29, 30, 31, 32, 37, 38, 39, 40, 45, 46, 47, 48],\n",
+       "         [49, 50, 51, 52, 57, 58, 59, 60, 65, 66, 67, 68],\n",
+       "         [53, 54, 55, 56, 61, 62, 63, 64, 69, 70, 71, 72],\n",
+       "         [73, 74, 75, 76, 81, 82, 83, 84, 89, 90, 91, 92],\n",
+       "         [77, 78, 79, 80, 85, 86, 87, 88, 93, 94, 95, 96]]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_tensor"
    ]
   },
   {
@@ -204,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
