--- a/notebooks/spec_aug.ipynb
+++ b/notebooks/spec_aug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,6 @@
     "    widths1 = torch.randint(0, max_channels_to_mask+1, (B, num_masks), device=device)\n",
     "    widths2 = torch.randint(0, max_channels_to_mask+1, (B, num_masks), device=device)\n",
     "    \n",
-    "\n",
     "    # precompute feature-block offsets\n",
     "    off1 = [feat * num_channels for feat in range(features_per_channel)]\n",
     "    off2 = [features_per_channel * num_channels + feat * num_channels\n",
@@ -124,28 +123,24 @@
     "                masks[b, base + idxs] = True\n",
     "\n",
     "    # broadcast mask over time\n",
-    "    return masks.unsqueeze(1).expand(-1, T, -1)\n"
+    "    masks = masks.unsqueeze(1).expand(-1, T, -1)\n",
+    "    X_masked = x.clone()\n",
+    "    X_masked[masks] = 0\n",
+    "    return X_masked, masks\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 64] [128, 192]\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1174267/2953208141.py:54: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_1195562/3414989549.py:43: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  idxs = torch.tensor(nearest, dtype=torch.long, device=device)\n",
-      "/tmp/ipykernel_1174267/2953208141.py:44: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_1195562/3414989549.py:53: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  idxs = torch.tensor(nearest, dtype=torch.long, device=device)\n"
      ]
     }
@@ -157,106 +152,27 @@
     "B, T, D = 5, 10, 256\n",
     "x = torch.randn(B, T, D)\n",
     "\n",
-    "mask = channel_specaugment_masks(x, 2, 5, dist_dict)"
+    "X_masked, masks = channel_specaugment_masks(x, 20, 5, dist_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([20])"
+       "torch.Size([5, 10, 256])"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.where(mask[0,0])[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([10, 100, 4])"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "device = 'cpu'\n",
-    "B, P, C = 10, 100, 4\n",
-    "mask = torch.zeros(B, P, C, dtype=torch.bool, device=device)\n",
-    "mask.shape\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([8])\n",
-      "torch.Size([8])\n",
-      "torch.Size([8])\n",
-      "torch.Size([8])\n",
-      "torch.Size([8])\n",
-      "torch.Size([8])\n",
-      "torch.Size([8])\n",
-      "torch.Size([8])\n",
-      "torch.Size([8])\n",
-      "torch.Size([8])\n"
-     ]
-    }
-   ],
-   "source": [
-    "Z, B, N = 5, 10, 8\n",
-    "hi = torch.Tensor([random.randint(0, Z) for _ in range(B*N)]).reshape(10,8)\n",
-    "for row in hi:\n",
-    "    print(row.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[42] [18, 58] [0] [0, 1]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([186, 250])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "channel_specaugment_indices(3, 2, dist_dict=dist_dict)"
+    "X_masked.shape"
    ]
   },
   {
@@ -267,10 +183,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([18, 26, 19, 10, 17, 25,  9, 11, 27,  2, 20, 34, 16, 12, 24, 28,  8, 33,\n",
-       "        35,  3,  1,  0, 32, 36,  4, 21, 42, 43, 29, 41, 13, 44, 40, 37,  5, 22,\n",
-       "        50, 30, 14, 51, 49, 45, 38, 52,  6, 48, 23, 58, 53, 46, 15, 31, 57, 59,\n",
-       "         7, 56, 39, 60, 54, 47, 61, 55, 62, 63])"
+       "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
      "execution_count": 23,
@@ -279,27 +192,52 @@
     }
    ],
    "source": [
-    "dist_dict[18]"
+    "X_masked[0, :, 2+64]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "64"
+       "tensor([False, False,  True, False,  True, False, False, False,  True, False,\n",
+       "        False, False,  True, False, False, False,  True, False,  True,  True,\n",
+       "         True, False, False,  True,  True,  True, False,  True,  True, False,\n",
+       "         True,  True, False, False,  True,  True,  True,  True,  True,  True,\n",
+       "        False, False, False,  True, False, False,  True, False, False, False,\n",
+       "        False,  True, False, False,  True,  True, False, False,  True,  True,\n",
+       "         True,  True,  True,  True, False, False,  True, False,  True, False,\n",
+       "        False, False,  True, False, False, False,  True, False, False, False,\n",
+       "         True, False,  True,  True,  True, False, False,  True,  True,  True,\n",
+       "        False,  True,  True, False,  True,  True, False, False,  True,  True,\n",
+       "         True,  True,  True,  True, False, False, False,  True, False, False,\n",
+       "         True, False, False, False, False,  True, False, False,  True,  True,\n",
+       "        False, False,  True,  True,  True,  True,  True,  True, False, False,\n",
+       "        False,  True,  True,  True,  True,  True, False,  True, False,  True,\n",
+       "        False, False, False,  True, False, False,  True, False,  True, False,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True, False, False,  True,  True,\n",
+       "         True,  True,  True, False, False, False, False,  True,  True, False,\n",
+       "         True, False, False, False,  True, False,  True,  True,  True,  True,\n",
+       "        False, False, False, False, False,  True,  True,  True,  True,  True,\n",
+       "        False,  True, False,  True, False, False, False,  True, False, False,\n",
+       "         True, False,  True, False,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        False, False,  True,  True,  True,  True,  True, False, False, False,\n",
+       "        False,  True,  True, False,  True, False, False, False,  True, False,\n",
+       "         True,  True,  True,  True, False, False])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "250-186"
+    "masks[0, 0, :]"
    ]
   },
   {
