--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4316910d",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "edb2175e",
    "metadata": {},
    "outputs": [],
@@ -74,12 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "id": "e6305c7d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def reorder_electrode_idxs(feats):\n",
     "    \n",
     "    '''\n",
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "id": "20398fe1",
    "metadata": {},
    "outputs": [],
@@ -205,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
@@ -394,62 +393,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "08ddc201",
+   "execution_count": 25,
+   "id": "6bc86d8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine_dicts(dict1, dict2):\n",
+    "    \n",
+    "    combined_dict = {}\n",
+    "    for key in dict1.keys():\n",
+    "        if key in ['sentenceDat', 'transcriptions', 'phonemes']: \n",
+    "            combined_dict[key] = dict1[key] + dict2[key]\n",
+    "        else:\n",
+    "            combined_dict[key] = np.concatenate([dict1[key], dict2[key]])\n",
+    "        \n",
+    "    return combined_dict"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1e25c8e4",
+   "metadata": {},
+   "source": [
+    "# Held out days testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "41cb63b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Placing t12.2022.07.21 in test/comp\n",
+      "Placing t12.2022.07.27 in test/comp\n",
+      "Placing t12.2022.08.02 in test/comp\n",
+      "Placing t12.2022.08.11 in test/comp\n",
+      "Placing t12.2022.08.13 in test/comp\n"
+     ]
+    }
+   ],
+   "source": [
+    "trainDatasets = []\n",
+    "testDatasets = []\n",
+    "competitionDatasets = []\n",
+    "\n",
+    "held_out_days = ['07.21', '07.27', '08.02', \n",
+    "                 '08.11', '08.13']\n",
+    "\n",
+    "# skipping the last 3 days because they are not historical data. \n",
+    "for dayIdx in range(len(sessionNames[:-3])):\n",
+    "    \n",
+    "    if sessionNames[dayIdx][-5:] in held_out_days:\n",
+    "        \n",
+    "        print(f\"Placing {sessionNames[dayIdx]} in test/comp\")\n",
+    "        \n",
+    "        # put both train and test data for held-out days into \"test (really val)\".\n",
+    "        testDataset1 = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat')\n",
+    "        testDataset2 = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat')\n",
+    "        testDataset = combine_dicts(testDataset1, testDataset2)\n",
+    "        testDatasets.append(testDataset)\n",
+    "        \n",
+    "        # only testing on these held-out days now. \n",
+    "        if os.path.exists(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat'):\n",
+    "            dataset = getDataset(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat')\n",
+    "            competitionDatasets.append(dataset)\n",
+    "            \n",
+    "    else:\n",
+    "        \n",
+    "        # put both train and test data for non held-out days into train\n",
+    "        trainDataset1 = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat')\n",
+    "        trainDataset2 = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat')\n",
+    "        trainDataset = combine_dicts(trainDataset1, trainDataset2)\n",
+    "        trainDatasets.append(trainDataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0b05f28a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combinedDict = combine_dicts(trainDataset1, trainDataset2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "37ee0af5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "with open('/home3/skaasyap/willett/data_log_both', mode='rb') as handle:\n",
-    "    data_log_both = pickle.load(handle)\n",
-    "    \n",
-    "with open('/home3/skaasyap/willett/data_log', mode='rb') as handle:\n",
-    "    data_log = pickle.load(handle)"
+    "allDatasets = {}\n",
+    "allDatasets['train'] = trainDatasets\n",
+    "allDatasets['test'] = testDatasets\n",
+    "allDatasets['competition'] = competitionDatasets\n",
+    "\n",
+    "dataSave_held_out_days = f\"{dataSave}_held_out_days\"\n",
+    "with open(dataSave_held_out_days, 'wb') as handle:\n",
+    "    pickle.dump(allDatasets, handle)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f253693c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "2e72e1f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "18927d6c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#np.array_equal(data_log['train'][0]['sentenceDat'][0], data_log_both['train'][0]['sentenceDat'][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41cb63b5",
+   "id": "4d4b3a64",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -471,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
