--- a/notebooks/formatCompetitionData_heldoutday.ipynb
+++ b/notebooks/formatCompetitionData_heldoutday.ipynb
@@ -2,25 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "f9b13fbe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home3/skaasyap/willett/competitionData/\n",
+      "/home3/skaasyap/willett/data_log_both\n"
+     ]
+    }
+   ],
    "source": [
-    "#import sys\n",
-    "#sys.path.append(\"/Users/amartorajaram/Downloads/neural_seq_decoder/scripts\")\n",
-    "#project_root = os.environ.get(\"NEURAL_DECODER_PROJECT_DIR\", \"/Users/amartorajaram/Downloads/neural_seq_decoder\")\n",
-    "#dataDir = os.environ.get(\"NEURAL_DECODER_DATA_DIR\", \"/Users/amartorajaram/Downloads/competitionData\")\n",
-    "#sys.path.append(os.path.join(project_root, \"scripts\"))\n",
-    "import sys\n",
-    "project_root = \"/Users/ebrahimfeghhi/neural_seq_decoder/scripts\"\n",
-    "dataDir = '/data/willett_data/competitionData/'\n",
-    "sys.path.append(project_root)"
+    "dataDir_paths = ['/data/willett_data/competitionData/', \n",
+    "                 '/home3/skaasyap/willett/competitionData/']\n",
+    "dataSave_paths = ['/data/willett_data/ptDecoder_ctc',\n",
+    "                  '/data/willett_data/ptDecoder_ctc_both',\n",
+    "                      '/home3/skaasyap/willett/data', \n",
+    "                      '/home3/skaasyap/willett/data_log', \n",
+    "                      '/home3/skaasyap/willett/data_log_both']\n",
+    "dataDir = dataDir_paths[1]\n",
+    "dataSave = dataSave_paths[-1]\n",
+    "print(dataDir)\n",
+    "print(dataSave)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [
@@ -44,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "edb2175e",
    "metadata": {},
    "outputs": [],
@@ -359,6 +370,7 @@
     "testDataset = None\n",
     "\n",
     "for dayIdx, session in enumerate(sessionNames):\n",
+    "    \n",
     "    session_path = dataDir + '/train/' + session + '.mat'\n",
     "\n",
     "    if not os.path.exists(session_path):\n",
@@ -596,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
