--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4316910d",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "edb2175e",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "e6305c7d",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "20398fe1",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "id": "815eca0e",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "id": "de32e23e",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "6bc86d8c",
    "metadata": {},
    "outputs": [],
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "41cb63b5",
    "metadata": {},
    "outputs": [
@@ -431,6 +431,7 @@
      "text": [
       "Placing t12.2022.07.21 in test/comp\n",
       "Placing t12.2022.07.27 in test/comp\n",
+      "Placing t12.2022.07.29 in test/comp\n",
       "Placing t12.2022.08.02 in test/comp\n",
       "Placing t12.2022.08.11 in test/comp\n",
       "Placing t12.2022.08.13 in test/comp\n"
@@ -442,13 +443,13 @@
     "testDatasets = []\n",
     "competitionDatasets = []\n",
     "\n",
-    "held_out_days = ['07.21', '07.27', '08.02', \n",
+    "evaluation_days = ['07.21', '07.27', '07.29', '08.02', \n",
     "                 '08.11', '08.13']\n",
     "\n",
     "# skipping the last 3 days because they are not historical data. \n",
     "for dayIdx in range(len(sessionNames[:-3])):\n",
     "    \n",
-    "    if sessionNames[dayIdx][-5:] in held_out_days:\n",
+    "    if sessionNames[dayIdx][-5:] in evaluation_days:\n",
     "        \n",
     "        print(f\"Placing {sessionNames[dayIdx]} in test/comp\")\n",
     "        \n",
@@ -470,6 +471,36 @@
     "        trainDataset2 = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat')\n",
     "        trainDataset = combine_dicts(trainDataset1, trainDataset2)\n",
     "        trainDatasets.append(trainDataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dba68931",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "16\n",
+      "18\n",
+      "19\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluation_days = ['07.21', '07.27', '08.02', \n",
+    "                 '08.11', '08.13']\n",
+    "\n",
+    "# skipping the last 3 days because they are not historical data. \n",
+    "for dayIdx in range(len(sessionNames)):\n",
+    "    \n",
+    "    if sessionNames[dayIdx][-5:] in evaluation_days:\n",
+    "        \n",
+    "        print(dayIdx)"
    ]
   },
   {
@@ -501,12 +532,23 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9d472119",
+   "metadata": {},
+   "source": [
+    "# Train on only 5 days"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4d4b3a64",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Held out days testing"
+   ]
   }
  ],
  "metadata": {
