--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4316910d",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home3/skaasyap/willett/competitionData/\n",
-      "/home3/skaasyap/willett/data_log_both\n"
+      "/data/willett_data/competitionData/\n",
+      "/data/willett_data/ptDecoder_ctc\n"
      ]
     }
    ],
@@ -23,15 +23,27 @@
     "                      '/home3/skaasyap/willett/data', \n",
     "                      '/home3/skaasyap/willett/data_log', \n",
     "                      '/home3/skaasyap/willett/data_log_both']\n",
-    "dataDir = dataDir_paths[1]\n",
-    "dataSave = dataSave_paths[-1]\n",
+    "\n",
+    "dataDir = dataDir_paths[0]\n",
+    "dataSave = dataSave_paths[0]\n",
     "print(dataDir)\n",
     "print(dataSave)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "d1f89411",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "nltk.download('averaged_perceptron_tagger_eng')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -46,10 +58,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "edb2175e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /home3/ebrahim2/nltk_data...\n",
+      "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n",
+      "[nltk_data] Downloading package cmudict to\n",
+      "[nltk_data]     /home3/ebrahim2/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/cmudict.zip.\n"
+     ]
+    }
+   ],
    "source": [
     "import re \n",
     "from g2p_en import G2p\n",
@@ -74,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "e6305c7d",
    "metadata": {},
    "outputs": [],
@@ -133,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "20398fe1",
    "metadata": {},
    "outputs": [],
@@ -204,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
@@ -266,10 +291,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "815eca0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "PermissionError",
+     "evalue": "[Errno 13] Permission denied: '/data/willett_data/competitionData//train/t12.2022.04.28.mat'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
+      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/site-packages/scipy/io/matlab/_mio.py:39\u001b[0m, in \u001b[0;36m_open_file\u001b[0;34m(file_like, appendmat, mode)\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 39\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mopen\u001b[39;49m(file_like, mode), \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     40\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mOSError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m     41\u001b[0m     \u001b[39m# Probably \"not found\"\u001b[39;00m\n",
+      "\u001b[0;31mPermissionError\u001b[0m: [Errno 13] Permission denied: '/data/willett_data/competitionData//train/t12.2022.04.28.mat'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m competitionDatasets \u001b[39m=\u001b[39m []\n\u001b[1;32m      6\u001b[0m \u001b[39mfor\u001b[39;00m dayIdx \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(sessionNames)):\n\u001b[0;32m----> 7\u001b[0m     trainDataset \u001b[39m=\u001b[39m getDataset(dataDir \u001b[39m+\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m/train/\u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m+\u001b[39;49m sessionNames[dayIdx] \u001b[39m+\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m.mat\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      8\u001b[0m     testDataset \u001b[39m=\u001b[39m getDataset(dataDir \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/test/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m sessionNames[dayIdx] \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m.mat\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     10\u001b[0m     trainDatasets\u001b[39m.\u001b[39mappend(trainDataset)\n",
+      "Cell \u001b[0;32mIn[8], line 4\u001b[0m, in \u001b[0;36mgetDataset\u001b[0;34m(fileName)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m\u001b[39m \u001b[39m\u001b[39mgetDataset\u001b[39m(fileName):\n\u001b[0;32m----> 4\u001b[0m     session_data \u001b[39m=\u001b[39m loadFeaturesAndNormalize(fileName)\n\u001b[1;32m      6\u001b[0m     allDat \u001b[39m=\u001b[39m []\n\u001b[1;32m      7\u001b[0m     trueSentences \u001b[39m=\u001b[39m []\n",
+      "Cell \u001b[0;32mIn[7], line 5\u001b[0m, in \u001b[0;36mloadFeaturesAndNormalize\u001b[0;34m(sessionPath, logPower, logBoth)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m\u001b[39m \u001b[39m\u001b[39mloadFeaturesAndNormalize\u001b[39m(sessionPath, logPower\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, logBoth\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[0;32m----> 5\u001b[0m     dat \u001b[39m=\u001b[39m scipy\u001b[39m.\u001b[39;49mio\u001b[39m.\u001b[39;49mloadmat(sessionPath)\n\u001b[1;32m      7\u001b[0m     input_features \u001b[39m=\u001b[39m []\n\u001b[1;32m      8\u001b[0m     transcriptions \u001b[39m=\u001b[39m []\n",
+      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/site-packages/scipy/io/matlab/_mio.py:225\u001b[0m, in \u001b[0;36mloadmat\u001b[0;34m(file_name, mdict, appendmat, **kwargs)\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     89\u001b[0m \u001b[39mLoad MATLAB file.\u001b[39;00m\n\u001b[1;32m     90\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    222\u001b[0m \u001b[39m    3.14159265+3.14159265j])\u001b[39;00m\n\u001b[1;32m    223\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    224\u001b[0m variable_names \u001b[39m=\u001b[39m kwargs\u001b[39m.\u001b[39mpop(\u001b[39m'\u001b[39m\u001b[39mvariable_names\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mNone\u001b[39;00m)\n\u001b[0;32m--> 225\u001b[0m \u001b[39mwith\u001b[39;00m _open_file_context(file_name, appendmat) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m    226\u001b[0m     MR, _ \u001b[39m=\u001b[39m mat_reader_factory(f, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m    227\u001b[0m     matfile_dict \u001b[39m=\u001b[39m MR\u001b[39m.\u001b[39mget_variables(variable_names)\n",
+      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/contextlib.py:119\u001b[0m, in \u001b[0;36m_GeneratorContextManager.__enter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[39mdel\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39margs, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mkwds, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfunc\n\u001b[1;32m    118\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 119\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mnext\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgen)\n\u001b[1;32m    120\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mStopIteration\u001b[39;00m:\n\u001b[1;32m    121\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mgenerator didn\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt yield\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m\u001b[39m \u001b[39m\u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/site-packages/scipy/io/matlab/_mio.py:17\u001b[0m, in \u001b[0;36m_open_file_context\u001b[0;34m(file_like, appendmat, mode)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[39m@contextmanager\u001b[39m\n\u001b[1;32m     16\u001b[0m \u001b[39mdef\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m_open_file_context\u001b[39m(file_like, appendmat, mode\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[0;32m---> 17\u001b[0m     f, opened \u001b[39m=\u001b[39m _open_file(file_like, appendmat, mode)\n\u001b[1;32m     18\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m     19\u001b[0m         \u001b[39myield\u001b[39;00m f\n",
+      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/site-packages/scipy/io/matlab/_mio.py:45\u001b[0m, in \u001b[0;36m_open_file\u001b[0;34m(file_like, appendmat, mode)\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[39mif\u001b[39;00m appendmat \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m file_like\u001b[39m.\u001b[39mendswith(\u001b[39m'\u001b[39m\u001b[39m.mat\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m     44\u001b[0m         file_like \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m.mat\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m---> 45\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mopen\u001b[39;49m(file_like, mode), \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     46\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     47\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mOSError\u001b[39;00m(\n\u001b[1;32m     48\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mReader needs file name or open file-like object\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     49\u001b[0m     ) \u001b[39mfrom\u001b[39;00m\u001b[39m \u001b[39m\u001b[39me\u001b[39;00m\n",
+      "\u001b[0;31mPermissionError\u001b[0m: [Errno 13] Permission denied: '/data/willett_data/competitionData//train/t12.2022.04.28.mat'"
+     ]
+    }
+   ],
    "source": [
     "trainDatasets = []\n",
     "testDatasets = []\n",
@@ -393,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "6bc86d8c",
    "metadata": {},
    "outputs": [],
@@ -421,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "41cb63b5",
    "metadata": {},
    "outputs": [
@@ -475,7 +522,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
+   "id": "7168acfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sessionNames) - 4 - 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "dba68931",
    "metadata": {},
    "outputs": [
@@ -483,8 +551,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
       "15\n",
       "16\n",
+      "17\n",
       "18\n",
       "19\n",
       "20\n"
@@ -493,19 +577,20 @@
    ],
    "source": [
     "evaluation_days = ['07.21', '07.27', '08.02', \n",
-    "                 '08.11', '08.13']\n",
+    "                 '08.11', '08.13', '07.29', '07.14', '07.05', '06.28', '06.23', '06.21', '06.16', \n",
+    "                 '06.14', '06.07', '06.02', '05.26', '05.24', '05.19', '05.17', '05.05', '04.28']\n",
     "\n",
     "# skipping the last 3 days because they are not historical data. \n",
     "for dayIdx in range(len(sessionNames)):\n",
     "    \n",
-    "    if sessionNames[dayIdx][-5:] in evaluation_days:\n",
+    "    print(dayIdx, np.argwhere(sessionNames[dayIdx][-5:]==evaluation_days))\n",
     "        \n",
     "        print(dayIdx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "0b05f28a",
    "metadata": {},
    "outputs": [],
@@ -515,7 +600,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
+   "id": "0bc78a3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/data/willett_data/ptDecoder_ctc\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataSave)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "37ee0af5",
    "metadata": {},
    "outputs": [],
@@ -532,23 +635,12 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "9d472119",
-   "metadata": {},
-   "source": [
-    "# Train on only 5 days"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d4b3a64",
+   "id": "cab3d9a7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Held out days testing"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -567,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
