--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -522,28 +522,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "id": "7168acfd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(sessionNames) - 4 - 5"
+    "a = float('inf')\n",
+    "if a < 0.15 + 0.01:\n",
+    "    print('hi')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "dba68931",
    "metadata": {},
    "outputs": [
@@ -551,27 +542,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n"
+      "0 []\n",
+      "1 []\n",
+      "2 []\n",
+      "3 []\n",
+      "4 []\n",
+      "5 []\n",
+      "6 []\n",
+      "7 []\n",
+      "8 []\n",
+      "9 []\n",
+      "10 []\n",
+      "11 []\n",
+      "12 []\n",
+      "13 []\n",
+      "14 []\n",
+      "15 []\n",
+      "16 []\n",
+      "17 []\n",
+      "18 []\n",
+      "19 []\n",
+      "20 []\n",
+      "21 []\n",
+      "22 []\n",
+      "23 []\n"
      ]
     }
    ],
@@ -584,8 +578,7 @@
     "for dayIdx in range(len(sessionNames)):\n",
     "    \n",
     "    print(dayIdx, np.argwhere(sessionNames[dayIdx][-5:]==evaluation_days))\n",
-    "        \n",
-    "        print(dayIdx)"
+    "        "
    ]
   },
   {
