Fixed format comp

--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "4316910d",
    "metadata": {},
    "outputs": [
@@ -10,32 +10,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/data/willett_data/competitionData/\n",
-      "/data/willett_data/ptDecoder_ctc\n"
+      "/home3/skaasyap/willett/competitionData/\n",
+      "/home3/skaasyap/willett/data_log_both\n"
      ]
     }
    ],
    "source": [
-    "dataDir_paths = ['/data/willett_data/competitionData/', \n",
-    "                 '/home3/skaasyap/willett/competitionData/']\n",
-    "dataSave_paths = ['/data/willett_data/ptDecoder_ctc',\n",
-    "                  '/data/willett_data/ptDecoder_ctc_both',\n",
-    "                      '/home3/skaasyap/willett/data', \n",
-    "                      '/home3/skaasyap/willett/data_log', \n",
-    "                      '/home3/skaasyap/willett/data_log_both']\n",
+    "dataDir_paths = ['/home3/skaasyap/willett/competitionData/']\n",
+    "dataSave_paths = ['/home3/skaasyap/willett/data', \n",
+    "                '/home3/skaasyap/willett/data_log_both']\n",
     "\n",
     "dataDir = dataDir_paths[0]\n",
-    "dataSave = dataSave_paths[0]\n",
+    "logBoth = True\n",
+    "\n",
+    "if logBoth:\n",
+    "    dataSave = dataSave_paths[-1]\n",
+    "else:\n",
+    "    dataSave = dataDir_paths[0]\n",
+    "    \n",
     "print(dataDir)\n",
     "print(dataSave)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d1f89411",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
+      "[nltk_data]     /home3/ebrahim/nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
+      "[nltk_data]       date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import nltk\n",
     "nltk.download('averaged_perceptron_tagger_eng')"
@@ -61,20 +84,7 @@
    "execution_count": 5,
    "id": "edb2175e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     /home3/ebrahim2/nltk_data...\n",
-      "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n",
-      "[nltk_data] Downloading package cmudict to\n",
-      "[nltk_data]     /home3/ebrahim2/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/cmudict.zip.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re \n",
     "from g2p_en import G2p\n",
@@ -158,14 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "20398fe1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import scipy\n",
     "\n",
-    "def loadFeaturesAndNormalize(sessionPath, logPower=True, logBoth=True):\n",
+    "def loadFeaturesAndNormalize(sessionPath, logBoth):\n",
     "    \n",
     "    dat = scipy.io.loadmat(sessionPath)\n",
     "\n",
@@ -180,10 +190,6 @@
     "    for i in range(n_trials):    \n",
     "        #get time series of TX and spike power for this trial\n",
     "        #first 128 columns = area 6v only\n",
-    "        if logPower:\n",
-    "            tx_crossings = dat['tx1'][0, i][:, 0:128]\n",
-    "            log_pow = np.log(dat['spikePow'][0,i][:,0:128])\n",
-    "            features = np.concatenate([tx_crossings, log_pow], axis=1)\n",
     "        if logBoth:\n",
     "            tx_crossings = np.log1p(dat['tx1'][0, i][:, 0:128])\n",
     "            log_pow = np.log(dat['spikePow'][0,i][:,0:128])\n",
@@ -229,15 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "def getDataset(fileName):\n",
-    "    session_data = loadFeaturesAndNormalize(fileName)\n",
+    "def getDataset(fileName, logBoth):\n",
+    "    \n",
+    "    session_data = loadFeaturesAndNormalize(fileName, logBoth)\n",
     "        \n",
     "    allDat = []\n",
     "    trueSentences = []\n",
@@ -324,14 +331,14 @@
     "\n",
     "\n",
     "for dayIdx in range(len(sessionNames)):\n",
-    "    trainDataset = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat')\n",
-    "    testDataset = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat')\n",
+    "    trainDataset = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
+    "    testDataset = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
     "\n",
     "    trainDatasets.append(trainDataset)\n",
     "    testDatasets.append(testDataset)\n",
     "\n",
     "    if os.path.exists(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat'):\n",
-    "        dataset = getDataset(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat')\n",
+    "        dataset = getDataset(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
     "        competitionDatasets.append(dataset)"
    ]
   },
@@ -652,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
