Cleaning up code

--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "4316910d",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/data/willett_data/competitionData/ /data/willett_data/ptDecoder_ctc_both\n"
+      "/home3/skaasyap/willett/competitionData/ /home3/skaasyap/willett/data\n"
      ]
     }
    ],
    "source": [
-    "server = 'obi'\n",
+    "server = 'leia'\n",
     "logBoth = False\n",
     "\n",
     "if server == 'obi':\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "d1f89411",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
-      "[nltk_data]     /home3/ebrahim2/nltk_data...\n",
+      "[nltk_data]     /home3/ebrahim/nltk_data...\n",
       "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
       "[nltk_data]       date!\n"
      ]
@@ -57,7 +57,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
+   "id": "79569a03",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "PermissionError",
+     "evalue": "[Errno 13] Permission denied: '/home3/skaasyap/willett/data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m\u001b[39m \u001b[39m\u001b[39mpickle\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mif\u001b[39;00m server \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mleia\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m----> 5\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39m/home3/skaasyap/willett/data\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m      6\u001b[0m         data \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39mload(f)\n\u001b[1;32m      7\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m/home3/skaasyap/willett/data_held_out_days\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n",
+      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/site-packages/IPython/core/interactiveshell.py:310\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    303\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    304\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    305\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    306\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    307\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    308\u001b[0m     )\n\u001b[0;32m--> 310\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "\u001b[0;31mPermissionError\u001b[0m: [Errno 13] Permission denied: '/home3/skaasyap/willett/data'"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "if server == 'leia':\n",
+    "    \n",
+    "    with open('/home3/skaasyap/willett/data', 'rb') as f:\n",
+    "        data = pickle.load(f)\n",
+    "    with open('/home3/skaasyap/willett/data_held_out_days', 'rb') as f:\n",
+    "        data_held_out = pickle.load(f)\n",
+    "    with open('/home3/skaasyap/willett/data_log_both', 'rb') as f:\n",
+    "        data_logged = pickle.load(f)\n",
+    "    with open('/home3/skaasyap/willett/data_log_both_held_out_days', 'rb') as f:\n",
+    "        data_logged_held_out = pickle.load(f)\n",
+    "        \n",
+    "    print(data['train'][0]['sentenceDat'][0].std(), data['train'][0]['sentenceDat'][0].mean())\n",
+    "    print(data_logged['train'][0]['sentenceDat'][0].std(), data_logged['train'][0]['sentenceDat'][0].mean())\n",
+    "\n",
+    "if server == 'obi':\n",
+    "    with open('/data/willett_data/ptDecoder_ctc', 'rb') as f:\n",
+    "        data = pickle.load(f)\n",
+    "    with open('/data/willett_data/ptDecoder_ctc_held_out_days', 'rb') as f:\n",
+    "        data_held_out = pickle.load(f)\n",
+    "    with open('/data/willett_data/ptDecoder_ctc_both', 'rb') as f:\n",
+    "        data_logged = pickle.load(f)\n",
+    "    with open('/data/willett_data/ptDecoder_ctc_both_held_out_days', 'rb') as f:\n",
+    "        data_logged_held_out = pickle.load(f)\n",
+    "        \n",
+    "i = 10\n",
+    "print(data['train'][i]['sentenceDat'][i].std(), data['train'][i]['sentenceDat'][i].mean())\n",
+    "print(data_logged['train'][i]['sentenceDat'][i].std(), data_logged['train'][i]['sentenceDat'][i].mean())\n",
+    "print(data_held_out['train'][i]['sentenceDat'][i].std(), data['train'][i]['sentenceDat'][i].mean())\n",
+    "print(data_logged_held_out['train'][i]['sentenceDat'][i].std(), data_logged['train'][i]['sentenceDat'][i].mean())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -84,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "edb2175e",
    "metadata": {},
    "outputs": [],
@@ -112,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "e6305c7d",
    "metadata": {},
    "outputs": [],
@@ -171,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "20398fe1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
@@ -301,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "815eca0e",
    "metadata": {},
    "outputs": [],
@@ -325,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "de32e23e",
    "metadata": {},
    "outputs": [
@@ -347,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "d5e86fa8",
    "metadata": {},
    "outputs": [
@@ -355,7 +409,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/data/willett_data/ptDecoder_ctc_both\n"
+      "/home3/skaasyap/willett/data\n"
      ]
     }
    ],
@@ -365,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "80014502",
    "metadata": {},
    "outputs": [],
