--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "4316910d",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "d1f89411",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,8 @@
     "def reorder_electrode_idxs(feats):\n",
     "    \n",
     "    '''\n",
-    "    First 128 indices of feats are txcrossings, second 128 features are spikeband power.\n",
+    "    In the original array, first 128 indices of feats are txcrossings, \n",
+    "    second 128 features are spikeband power.\n",
     "    Here what we do is rearrange feats so that:\n",
     "        0-64: tx for inferior\n",
     "        64-128: spikepow for inferior\n",
