--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4316910d",
    "metadata": {},
    "outputs": [
@@ -10,13 +10,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home3/skaasyap/willett/competitionData/ /home3/skaasyap/willett/data\n"
+      "/data/willett_data/competitionData/ /data/willett_data/ptDecoder_ctc\n"
      ]
     }
    ],
    "source": [
-    "server = 'leia'\n",
-    "logBoth = True\n",
+    "server = 'obi'\n",
+    "logBoth = False\n",
     "\n",
     "if server == 'obi':\n",
     "    dataDir = '/data/willett_data/competitionData/'\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "d1f89411",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
-      "[nltk_data]     /home3/ebrahim/nltk_data...\n",
+      "[nltk_data]     /home3/ebrahim2/nltk_data...\n",
       "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
       "[nltk_data]       date!\n"
      ]
@@ -57,7 +57,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,19 +69,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "79569a03",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0714295 0.09158699\n",
-      "1.0356277 0.094650164\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
@@ -119,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -134,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "edb2175e",
    "metadata": {},
    "outputs": [],
@@ -162,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "e6305c7d",
    "metadata": {},
    "outputs": [],
@@ -222,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "20398fe1",
    "metadata": {},
    "outputs": [],
@@ -289,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
@@ -436,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "6bc86d8c",
    "metadata": {},
    "outputs": [],
@@ -504,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "adb4351e",
    "metadata": {},
    "outputs": [
@@ -537,7 +528,7 @@
        " 't12.2022.08.25']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "41cb63b5",
    "metadata": {},
    "outputs": [
@@ -556,11 +547,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Placing t12.2022.05.24 in test/comp\n",
-      "Placing t12.2022.05.26 in test/comp\n",
-      "Placing t12.2022.06.02 in test/comp\n",
-      "Placing t12.2022.06.07 in test/comp\n",
-      "Placing t12.2022.06.14 in test/comp\n"
+      "Placing t12.2022.06.16 in test/comp\n",
+      "Placing t12.2022.06.21 in test/comp\n",
+      "Placing t12.2022.06.28 in test/comp\n",
+      "Placing t12.2022.07.05 in test/comp\n",
+      "Placing t12.2022.07.14 in test/comp\n"
      ]
     }
    ],
@@ -638,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "81af6595",
    "metadata": {},
    "outputs": [
@@ -646,7 +637,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "1\n"
      ]
     }
    ],
@@ -733,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
